[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gtfobins-cli"
version = "1.0.0"
authors = [
    {name = "t0thkr1s", email = "t0thkr1s@icloud.com"},
]
description = "Command-line tool for GTFOBins - Unix binaries exploitation helper"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "GPL-3.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: System Shells",
    "Topic :: Utilities",
]
keywords = ["gtfobins", "security", "exploitation", "privilege-escalation", "pentesting"]
dependencies = [
    "colorama>=0.4.0",
    "pygments>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/t0thkr1s/gtfo"
Repository = "https://github.com/t0thkr1s/gtfo"
Issues = "https://github.com/t0thkr1s/gtfo/issues"

[project.scripts]
gtfo = "gtfo.cli:main"

[tool.setuptools]
packages = ["gtfo"]

[tool.setuptools.package-data]
gtfo = ["data/*.json"]
