[metadata]
name = gtfobins
version = 1.0.0
author = t0thkr1s
author_email = t0thkr1s@icloud.com
description = Command-line tool for GTFOBins - Unix binaries exploitation helper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/t0thkr1s/gtfo
project_urls =
    Bug Tracker = https://github.com/t0thkr1s/gtfo/issues
    Source Code = https://github.com/t0thkr1s/gtfo
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Security
    Topic :: System :: System Shells
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.6
install_requires =
    colorama>=0.4.0
    pygments>=2.0.0

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    gtfo = gtfo.cli:main

[options.package_data]
gtfo = data/*.json
